# lastsite

./: Cargo.toml  LICENSE  README.md  package.json  vercel.json
api/: index.js
docs/: INSTALL.fa.md  INSTALL.md
lib/: origin.js  proxy.js
lib/site/: api_threads.js  app.js  assets.js  content.js  layout.js  styles.js
new-repo/: README.md  package.json
new-repo/api/: index.js
new-repo/docs/: INSTALL.fa.md  INSTALL.md
new-repo/lib/: proxy.js
new-repo/lib/site/: api_threads.js  assets.js  pages.js
new-repo/scripts/: init-new-repo.sh  verify-deployment.sh
scripts/: init-new-repo.sh  verify-deployment.sh
