[package]
name = "vercel-xhttp-relay"
version = "0.1.0"
edition = "2021"
description = "Rust-based XHTTP relay running on Vercel Edge for Xray/V2Ray"
license = "MIT"

[dependencies]
vercel_runtime = "1.1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "headers"] }
futures-util = "0.3"